tests/fail/os_linux/ch_stable/input_not_str.rs
fn main() {
    sscanf::scanf!(5usize, "{}", usize);
    sscanf::scanf!(b"5", "{}", usize);
}
