tests/fail/os_linux/ch_stable/input_not_str.stderr
error[E0277]: the trait bound `usize: AsRef<str>` is not satisfied
   --> $DIR/input_not_str.rs:2:20
    |
2   |     sscanf::scanf!(5usize, "{}", usize);
    |                    ^^^^^^ the trait `AsRef<str>` is not implemented for `usize`
    |
note: required by `as_ref`

error[E0277]: the trait bound `[u8; 1]: AsRef<str>` is not satisfied
   --> $DIR/input_not_str.rs:3:20
    |
3   |     sscanf::scanf!(b"5", "{}", usize);
    |                    ^^^^
    |                    |
    |                    expected an implementor of trait `AsRef<str>`
    |                    help: consider borrowing here: `&b"5"`
    |
    = note: required because of the requirements on the impl of `AsRef<str>` for `&[u8; 1]`
note: required by `as_ref`
